<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.lappsgrid</groupId>
    <artifactId>json2json-web-service</artifactId>
    <version>0.3.3-SNAPSHOT</version>
    <packaging>war</packaging>


    <name>Web Services for JSON to JSON Transformation</name>
    <description>Web Service for the JSON transformation.</description>

    <scm>
        <url>https://github.com/chunqishi/edu.brandeis.cs.json2json-web-service</url>
        <connection>scm:git:https://github.com/chunqishi/edu.brandeis.cs.json2json-web-service.git</connection>
        <developerConnection>scm:git:https://github.com/chunqishi/edu.brandeis.cs.json2json-web-service.git</developerConnection>
        <tag>v0.3.2-SNAPSHOT</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>anc-releases</id>
            <url>http://www.anc.org:8080/nexus/content/repositories/releases/</url>
        </repository>
        <snapshotRepository>
            <id>anc-snapshots</id>
            <url>http://www.anc.org:8080/nexus/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <developers>
    <developer>
        <email>shicq@cs.brandeis.edu</email>
        <name>Chunqi SHI</name>
        <url>https://github.com/chunqishi/</url>
        <id>chunqishi</id>
    </developer>
    </developers>


    <properties>
        <lapps.version>2.0.4</lapps.version>
        <lapps.discriminator>2.1.0-SNAPSHOT</lapps.discriminator>
        <groovy.version>2.4.5</groovy.version>
        <serialization.version>2.0.0</serialization.version>
    </properties>

    <dependencies>

        <!--<dependency>-->
            <!--<groupId>org.lappsgrid</groupId>-->
            <!--<artifactId>json2json</artifactId>-->
            <!--<version>0.3.2</version>-->
        <!--</dependency>-->

        <!-- ^^^^^^^^^^^^^^ Groovy    ^^^^^^^^^^^^^^^^^^^^^ -->
        <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-json</artifactId>
            <version>${groovy.version}</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-console</artifactId>
            <version>${groovy.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.4.4</version>
        </dependency>

        <dependency>
            <groupId>org.lappsgrid</groupId>
            <artifactId>all</artifactId>
            <version>${lapps.version}</version>
        </dependency>
        <dependency>
            <groupId>org.lappsgrid</groupId>
            <artifactId>discriminator</artifactId>
            <version>${lapps.discriminator}</version>
        </dependency>
        <dependency>
            <groupId>org.lappsgrid</groupId>
            <artifactId>service-grid-libs</artifactId>
            <version>1.1.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>xmlunit</groupId>
            <artifactId>xmlunit</artifactId>
            <version>1.6</version>
            <scope>test</scope>
        </dependency>

        <!--<dependency>-->
            <!--<groupId>org.lappsgrid</groupId>-->
            <!--<artifactId>serialization</artifactId>-->
            <!--<version>${serialization.version}</version>-->
        <!--</dependency>-->
    </dependencies>

    <build>
        <finalName>json2json#${project.version}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <version>2.7.2</version>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!--<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>-->
                    <!-- mvn test: java.lang.OutOfMemoryError: Java heap space -->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.mortbay.jetty</groupId>
                <artifactId>maven-jetty-plugin</artifactId>
                <version>6.1.10</version>
                <configuration>
                    <scanIntervalSeconds>10</scanIntervalSeconds>
                    <connectors>
                        <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
                            <port>4040</port>
                            <maxIdleTime>60000</maxIdleTime>
                        </connector>
                    </connectors>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <tagNameFormat>v@{project.version}</tagNameFormat>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <releaseProfiles>releases</releaseProfiles>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
    </profiles>
</project>